# GBC-Emulator

./: CMakeLists.txt
GBC Emu/: main.c
GBC Emulator Library/Structs/: structs.h
GBC_Emulator_Library/CPU/: cpu.c  cpu.h
GBC_Emulator_Library/Cartridge/: cartridge.c  cartridge.h
GBC_Emulator_Library/Enums/: enum.h
GBC_Emulator_Library/GB/: gameboy.c  gameboy.h
GBC_Emulator_Library/MBC/: mbc.c  mbc.h
GBC_Emulator_Library/Main Instructions/: mi.c  mi.h
GBC_Emulator_Library/Misc/: misc.c  misc.h
GBC_Emulator_Library/Prefix CB Instructions/: cbi.c  cbi.h
GBC_Emulator_Library/Structs/: structs.h
include/: emu.h
lib/: emu.c
resources/: symbols.txt  website resources.txt
resources/Daily Write Ups/: day1.txt  day2.txt  day3.txt  day4.txt  day5.txt  day7.txt  day8.txt  day9.txt
resources/Daily Write Ups/1 - 10/: day10.txt  day2.txt  day6.txt  day7.txt  day9.txt
resources/Daily Write Ups/11 - 20/: day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt
src/: emu.c
